--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by ad1s. It uses data from mapbox.com and weather.api</p>
         <img class="portrait" src="/img/robot.png" alt="">
     </div>
 
